fix: figure caption alignment

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -190,6 +190,7 @@ li ol {
 figure {
   display: -webkit-box;
   display: flex;
+  flex-direction: column;
   -webkit-box-pack: justify;
   justify-content: space-between;
   -webkit-box-align: start;
